# qt-system-tray-push-notifications

./: CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc  systemtray.cpp  systemtray.h
